# LameEnc

./: CMakeLists.txt  README.md
lame/: mp3lame.lib
src/: lameWrapper.cpp  lameWrapper.h  main.cpp  threadpool.cpp  threadpool.h
